--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
 	"displayName": "Inline fold",
 	"description": "A custom decorator that \"fold\" matching content in single line",
 	"icon": "res/icon.png",
-	"version": "0.1.7",
+	"version": "0.1.8",
 	"publisher": "moalamri",
 	"homepage": "https://github.com/moalamri/vscode-inline-fold",
 	"bugs": "https://github.com/moalamri/vscode-inline-fold/issues",
@@ -191,7 +191,13 @@
 				"inlineInjectorIdFold.maskChar",
 				"inlineInjectorIdFold.supportedLanguages"
 			]
-		}
+		},
+		"jsonValidation": [
+			{
+				"fileMatch": "manifest.json",
+				"url": "./src/manifestSchema.json"
+			}
+		]
 	},
 	"scripts": {
 		"vscode:prepublish": "pnpm run compile",
