--- a/package.json
+++ b/package.json
@@ -28,6 +28,10 @@
 			{
 				"command": "inlineInjectorIdFold.toggle",
 				"title": "Toggle inline fold"
+			},
+			{
+				"command": "injectorId.wrap",
+				"title": "Wrap with Injector Id"
 			}
 		],
 		"configuration": {
@@ -195,9 +199,18 @@
 		"jsonValidation": [
 			{
 				"fileMatch": "manifest.json",
-				"url": "./src/manifestSchema.json"
+				"url": "http://localhost:3000/test/enum-data.json"
 			}
-		]
+		],
+		"menus": {
+			"editor/context": [
+				{
+					"when": "editorHasSelection",
+					"command": "injectorId.wrap",
+					"group": "injectorId@1"
+				}
+			]
+		}
 	},
 	"scripts": {
 		"vscode:prepublish": "pnpm run compile",
@@ -210,5 +223,8 @@
 		"@types/node": "^17.0.33",
 		"@types/vscode": "1.68.1",
 		"typescript": "4.7.4"
+	},
+	"dependencies": {
+		"axios": "^1.3.4"
 	}
 }
