--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
 	"displayName": "Codebuddy Inline Fold Injector Metadata",
 	"description": "A custom decorator that \"fold\" matching content in single line",
 	"icon": "res/icon.png",
-	"version": "1.2.0",
+	"version": "1.3.0",
 	"publisher": "CodebuddyPvdLtd",
 	"homepage": "https://github.com/sumancbd/vscode-inline-fold-injector-meta-data",
 	"bugs": "https://github.com/sumancbd/vscode-inline-fold-injector-meta-data/issues",
@@ -32,6 +32,10 @@
 			{
 				"command": "injectorId.wrap",
 				"title": "Wrap with Injector Id"
+			},
+			{
+				"command": "injectorId.insert",
+				"title": "Insert Injector Id"
 			}
 		],
 		"configuration": {
@@ -208,6 +212,11 @@
 					"when": "editorHasSelection",
 					"command": "injectorId.wrap",
 					"group": "injectorId@1"
+				},
+				{
+					"when": "editorFocus",
+					"command": "injectorId.insert",
+					"group": "injectorId@2"
 				}
 			]
 		}
