feat: snippets for typescript and typescriptreact is added

--- a/package.json
+++ b/package.json
@@ -219,7 +219,17 @@
 					"group": "injectorId@2"
 				}
 			]
-		}
+		},
+		"snippets": [
+			{
+				"language": "typescript",
+				"path": "./src/typescript.json"
+			},
+			{
+				"language": "typescriptreact",
+				"path": "./src/typescriptreact.json"
+			}
+		]
 	},
 	"scripts": {
 		"vscode:prepublish": "pnpm run compile",
